[gd_scene load_steps=10 format=3 uid="uid://bn2fpsxxx8uyq"]

[ext_resource type="FontFile" uid="uid://d00vm0x0a7tly" path="res://sub_title.tres" id="1"]
[ext_resource type="FontVariation" uid="uid://cxd8jd4l5405w" path="res://title.tres" id="2"]
[ext_resource type="Script" path="res://scenes/levels/settings.gd" id="3"]
[ext_resource type="FontFile" uid="uid://rb827p6o1ltk" path="res://fonts/HakgyoansimSantteutdotumM.ttf" id="3_f2etg"]
[ext_resource type="Script" path="res://scenes/levels/text_edit.gd" id="4"]
[ext_resource type="FontFile" path="res://label.tres" id="5"]

[sub_resource type="Theme" id="1"]

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.94902, 0.372549, 0.14902, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 600.0

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 19.0
offset_right = 703.0
offset_bottom = 80.0
theme = SubResource("1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 45
text = "설정하기"
horizontal_alignment = 1
vertical_alignment = 1

[node name="defensive_character" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 111.0
offset_right = 490.0
offset_bottom = 303.0
pivot_offset = Vector2(-207, -18)
theme_override_constants/separation = 9

[node name="label" type="Label" parent="defensive_character"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_f2etg")
theme_override_font_sizes/font_size = 25
text = "수비 캐릭터 배치하기"

[node name="edit" type="TextEdit" parent="defensive_character"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_styles/normal = SubResource("2")
script = ExtResource("4")

[node name="attack_character" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 111.0
offset_right = 970.0
offset_bottom = 303.0
pivot_offset = Vector2(-207, -18)
theme_override_constants/separation = 9

[node name="label" type="Label" parent="attack_character"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 25
text = "공격 캐릭터 배치하기"

[node name="edit" type="TextEdit" parent="attack_character"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_styles/normal = SubResource("2")
script = ExtResource("4")

[node name="defensive_command" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 325.0
offset_right = 490.0
offset_bottom = 517.0
pivot_offset = Vector2(-207, -18)
theme_override_constants/separation = 9

[node name="label" type="Label" parent="defensive_command"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 25
text = "수비 기보 입력하기"

[node name="edit" type="TextEdit" parent="defensive_command"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_styles/normal = SubResource("2")
script = ExtResource("4")

[node name="attack_command" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 325.0
offset_right = 970.0
offset_bottom = 517.0
pivot_offset = Vector2(-207, -18)
theme_override_constants/separation = 9

[node name="label" type="Label" parent="attack_command"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 25
text = "공격 기보 입력하기"

[node name="edit" type="TextEdit" parent="attack_command"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_styles/normal = SubResource("2")
script = ExtResource("4")

[node name="game_start" type="Button" parent="."]
layout_mode = 0
offset_left = 691.0
offset_top = 526.0
offset_right = 970.0
offset_bottom = 582.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("3")
text = "게임 실행하기"

[connection signal="text_changed" from="defensive_character/edit" to="defensive_character/edit" method="_on_edit_text_changed_defense_batch"]
[connection signal="text_changed" from="attack_character/edit" to="attack_character/edit" method="_on_edit_text_changed_attack_batch"]
[connection signal="text_changed" from="defensive_command/edit" to="defensive_command/edit" method="_on_edit_text_changed_defense_command"]
[connection signal="text_changed" from="attack_command/edit" to="attack_command/edit" method="_on_edit_text_changed_attack_command"]
[connection signal="pressed" from="game_start" to="." method="_on_game_start_pressed"]
